tests/fixtures/invalid/set_bitnot.py
# Cannot use bitwise NOT on set
x: int = ~{1, 2, 3}
